--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+
     <div class="wrapper">
 
         <!-- hero section -->
@@ -18,8 +19,9 @@
 
             <header class="header">
                 <div class="logo-img">
-                    <img src="assets/logo.svg" alt="logo" class="logo__img">
+                    <img src="assets/img/logo.svg" alt="logo" class="logo__img">
                 </div>
+
                 <div class="header-nav_btns">
                     <nav class="nav">
                         <ul class="nav__list">
@@ -30,99 +32,133 @@
                     </nav>
                 </div>
 
-                <div class="header-lang">
-                    <nav class="lang">
-                        <ul class="lang__list">
-                            <li class="lang__item"><a href="" class="lang__link" data-goto="1">Eng</a></li>
-                            <!-- <li class="nav__item"><a href="" class="nav__link" data-goto="2">What we de</a></li>
-                            <li class="nav__item"><a href="" class="nav__link" data-goto="3">Contacts</a></li> -->
-                        </ul>
-                    </nav>
+                <div class="switch-lang">
+                    <ul class="lang-list">
+                        <li class="lang-item">Eng</li>
+                        <li class="lang-item">Esp</li>
+                        <li class="lang-item">Ru</li>
+                    </ul>
                 </div>
-
             </header>
+
+            <!-- <div class="illustrations">
+                <div class="drone">
+                    <img src="assets/img/drone.png" alt="logo" class="logo__img">
+                </div>
+                <div class="flat">
+                    <img src="assets/img/flat.png" alt="logo" class="logo__img">
+                </div>
+            </div> -->
 
             <div class="hero__container">
                 <div class="hero__txt">
                     <div class="section-title">
                         <h1>Aero filming and virtual 3D tours</h1>
                     </div>
-                    <div class="whatWeDo__text">
-                        <p>Our aerofilming and 3D virtual tours and great way to show all ins and outs of any
-                            property object</p>
-                    </div>
-                </div>
-            </div>
-
-        </section>
-
-        <!-- whatWeDo secction -->
-        <section class="whatWeDo">
-            <div class="container whatWeDo-container">
-
-                <div class="whatWeDo-txt">
-                    <div class="whatWeDo__header">
-                        <h2>After and before</h2>
-                    </div>
-                    <div class="whatWeDo__text">
-                        <p>Here is an exact illustrating of you services</p>
-                    </div>
-                </div>
-                <div class="after">
-                    <p class="after-text">
-                        After
-                    </p>
-                </div>
-
-                <div class="after-effects">
-                    <div class="3d-winddow"></div>
-                    <div class="aero-window"></div>
-                </div>
-
-                <div class="before">
-                    <p class="before-text">
-                        Before
-                    </p>
-                </div>
-
-                <div class="photo-slider">
-
-                </div>
-            </div>
-        </section>
-
-        <!-- contacts section -->
-        <section class=" contacts">
-            <div class="container contacts-container">
-
-                <div class="pricing-container">
-                    <div class="pricing__header">
-                        <h2>Pricing</h2>
-                    </div>
-                    <div class="pricing__text">
-                        <p>It depends</p>
+                    <div class="hero-desc">
+                        <p>We offer aerofilming and 3D virtual tours. It is a great way to show all ins of any
+                            property object, restaurant or have a post-pdocution for any event</p>
                     </div>
                 </div>
 
-                <div class="contacts-container">
-                    <div class="contacts-header">
-                        <h2>
-                            We are best
-                        </h2>
-                    </div>
 
-                    <ul class="contacts-list">
-                        <li class="contacts-phone"> 610 628 003</li>
-                        <li class="contacts-email">reawqk@mail.ru</li>
-                        <li class="contacts-address">Lloret de Mar</li>
+                <div class="socials">
+                    <ul class="socials-list">
+                        <li class="socials-item">
+                            <a href="index.html" class="socials__link">
+                                <img src="assets/img/inst.svg" alt="logo" class="socials-icon">
+                            </a>
+                        </li>
+                        <li class="socials-item">
+                            <a href="index.html" class="socials__link">
+                                <img src="assets/img/ytb.svg" alt="logo" class="socials-icon">
+                            </a>
+                        </li>
+                        <li class="socials-item">
+                            <a href="index.html" class="socials__link">
+                                <img src="assets/img/fb.svg" alt="logo" class="socials-icon">
+                            </a>
+                        </li>
                     </ul>
                 </div>
-
             </div>
+
         </section>
 
+        <!-- About secction -->
+        <section class="about">
+            <div class="container ">
+
+                <div class="about-txt">
+                    <div class="about__header">
+                        <h2>What we do</h2>
+                    </div>
+                    <div class="about__txt">
+                        <p>Please have a look on our portfolio</p>
+                    </div>
+                </div>
+
+                <div class="demo">
+                    <div class="tour-winddow">
+                        <iframe class="iframe" allowfullscreen src="https://www.youtube.com/watch?v=9TmgdP0se8M">
+                        </iframe>
+                    </div>
+                    <div class="aero-window">
+                        <iframe class="iframe" allowfullscreen src="https://www.youtube.com/watch?v=9TmgdP0se8M">
+                        </iframe>
+                    </div>
+                </div>
+
+            </div>
     </div>
-    <!-- <link rel="stylesheet" href="assets/main.css"> -->
+    </section>
+
+    <!-- contacts section -->
+    <section class=" contacts">
+        <div class="container contacts-container">
+
+            <div class="pricing-container">
+                <div class="pricing__header">
+                    <h2>Pricing</h2>
+                </div>
+                <div class="pricing__text">
+                    <p>There is no fixed pricing policy, as it dependes on the object size, location, vidoe duration.
+                        In case of aerofilming weather is also paying a big part in vidoe production.
+                    </p>
+                </div>
+            </div>
+
+            <div class="contacts">
+                <div class="contacts-header">
+                    <h2>
+                        Contacts
+                    </h2>
+                </div>
+
+                <ul class="contacts-list">
+                    <li class="contacts-item"><b>Phone:</b> &nbsp;&nbsp;&nbsp;+34 610 628 003</li>
+                    <li class="contacts-item"><b>Email:</b> &nbsp;&nbsp;&nbsp; reawqk@mail.ru</li>
+                    <li class="contacts-item"><b>Address:</b>&nbsp;&nbsp;&nbsp; Lloret de Mar, Girona province, Spain
+                    </li>
+                </ul>
+            </div>
+
+        </div>
+        <footer class="footer">
+            <p class="rigths">Ⓒ All rights reserved</p>
+        </footer>
+    </section>
+
+    </div>
+    <link rel="stylesheet" href="assets/main.css">
 </body>
+
+<!-- 
+    1 меню бургера для мобилки
+    2 адаптив таблетка
+    3 адаптив мобилка
+    4 перевести все в rem 
+
+ -->
 
 </html>
