--- a/index.html
+++ b/index.html
@@ -22,14 +22,12 @@
                     <img src="assets/img/logo.svg" alt="logo" class="logo__img">
                 </div>
 
-                <div class="header-nav_btns">
-                    <nav class="nav">
-                        <ul class="nav__list">
-                            <li class="nav__item"><a href="" class="nav__link" data-goto="1">About us</a></li>
-                            <li class="nav__item"><a href="" class="nav__link" data-goto="2">What we de</a></li>
-                            <li class="nav__item"><a href="" class="nav__link" data-goto="3">Contacts</a></li>
-                        </ul>
-                    </nav>
+                <div class="nav">
+                    <ul class="nav__list">
+                        <li class="nav__item"><a href="" class="nav__link" data-goto="1">About us</a></li>
+                        <li class="nav__item"><a href="" class="nav__link" data-goto="2">What we de</a></li>
+                        <li class="nav__item"><a href="" class="nav__link" data-goto="3">Contacts</a></li>
+                    </ul>
                 </div>
 
                 <div class="switch-lang">
@@ -41,26 +39,15 @@
                 </div>
             </header>
 
-            <!-- <div class="illustrations">
-                <div class="drone">
-                    <img src="assets/img/drone.png" alt="logo" class="logo__img">
-                </div>
-                <div class="flat">
-                    <img src="assets/img/flat.png" alt="logo" class="logo__img">
-                </div>
-            </div> -->
 
             <div class="hero__container">
                 <div class="hero__txt">
-                    <div class="section-title">
-                        <h1>Aero filming and virtual 3D tours</h1>
-                    </div>
+                    <h1 class="section-title">Aero filming and virtual 3D tours</h1>
                     <div class="hero-desc">
-                        <p>We offer aerofilming and 3D virtual tours. It is a great way to show all ins of any
-                            property object, restaurant or have a post-pdocution for any event</p>
+                        We offer aerofilming and 3D virtual tours. It is a great way to show all ins of any
+                        property object, restaurant or have a post-pdocution for any event
                     </div>
                 </div>
-
 
                 <div class="socials">
                     <ul class="socials-list">
@@ -83,34 +70,41 @@
                 </div>
             </div>
 
-        </section>
 
-        <!-- About secction -->
-        <section class="about">
-            <div class="container ">
 
-                <div class="about-txt">
-                    <div class="about__header">
-                        <h2>What we do</h2>
-                    </div>
-                    <div class="about__txt">
-                        <p>Please have a look on our portfolio</p>
-                    </div>
-                </div>
 
-                <div class="demo">
-                    <div class="tour-winddow">
-                        <iframe class="iframe" allowfullscreen src="https://www.youtube.com/watch?v=9TmgdP0se8M">
-                        </iframe>
-                    </div>
-                    <div class="aero-window">
-                        <iframe class="iframe" allowfullscreen src="https://www.youtube.com/watch?v=9TmgdP0se8M">
-                        </iframe>
-                    </div>
-                </div>
-
+            <div class="drone">
+                <img src="assets/img/drone.png" alt="logo" class="drone-illust">
             </div>
+            <div class="flat">
+                <img src="assets/img/flat.png" alt="logo" class="flat-illust">
+            </div>
+
+
     </div>
+
+    </section>
+
+    <!-- About secction -->
+    <section class="about">
+
+        <h2 class="about-header">What we do</h2>
+        <div class="about-txt">
+            You can have a look on illustration of our services below. 
+            We offer a great way to show all the beauty of any sight.
+        </div>
+
+        <div class="demo">
+            <div class="tour-winddow">
+                <iframe class="iframe" allowfullscreen src="https://www.youtube.com/watch?v=9TmgdP0se8M">
+                </iframe>
+            </div>
+            <div class="aero-window">
+                <iframe class="iframe" allowfullscreen src="https://www.youtube.com/watch?v=9TmgdP0se8M">
+                </iframe>
+            </div>
+        </div>
+
     </section>
 
     <!-- contacts section -->
@@ -118,13 +112,10 @@
         <div class="container contacts-container">
 
             <div class="pricing-container">
-                <div class="pricing__header">
-                    <h2>Pricing</h2>
-                </div>
+                <h2 class="pricing__header">Pricing</h2>
                 <div class="pricing__text">
-                    <p>There is no fixed pricing policy, as it dependes on the object size, location, vidoe duration.
-                        In case of aerofilming weather is also paying a big part in vidoe production.
-                    </p>
+                    There is no fixed pricing policy, as it dependes on the object size, location, vidoe duration.
+                    In case of aerofilming weather is also paying a big part in vidoe production.
                 </div>
             </div>
 
@@ -138,7 +129,7 @@
                 <ul class="contacts-list">
                     <li class="contacts-item"><b>Phone:</b> &nbsp;&nbsp;&nbsp;+34 610 628 003</li>
                     <li class="contacts-item"><b>Email:</b> &nbsp;&nbsp;&nbsp; reawqk@mail.ru</li>
-                    <li class="contacts-item"><b>Address:</b>&nbsp;&nbsp;&nbsp; Lloret de Mar, Girona province, Spain
+                    <li class="contacts-item"><b>Address:</b> &nbsp;&nbsp;&nbsp; Lloret de Mar, Girona province, Spain
                     </li>
                 </ul>
             </div>
