--- a/index.html
+++ b/index.html
@@ -10,137 +10,136 @@
 </head>
 
 <body>
+    <div class="page">
+        <div class="wrapper">
 
-    <div class="wrapper">
+            <!-- hero section -->
 
-        <!-- hero section -->
+            <section class="section hero">
 
-        <section class="section hero">
+                <header class="header">
+                    <div class="logo-img">
+                        <img src="assets/img/logo.svg" alt="logo" class="logo__img">
+                    </div>
 
-            <header class="header">
-                <div class="logo-img">
-                    <img src="assets/img/logo.svg" alt="logo" class="logo__img">
-                </div>
+                    <div class="nav">
+                        <ul class="nav__list">
+                            <li class="nav__item"><a href="" class="nav__link" data-goto="1">About us</a></li>
+                            <li class="nav__item"><a href="" class="nav__link" data-goto="2">What we de</a></li>
+                            <li class="nav__item"><a href="" class="nav__link" data-goto="3">Contacts</a></li>
+                        </ul>
+                    </div>
 
-                <div class="nav">
-                    <ul class="nav__list">
-                        <li class="nav__item"><a href="" class="nav__link" data-goto="1">About us</a></li>
-                        <li class="nav__item"><a href="" class="nav__link" data-goto="2">What we de</a></li>
-                        <li class="nav__item"><a href="" class="nav__link" data-goto="3">Contacts</a></li>
-                    </ul>
-                </div>
-
-                <div class="switch-lang">
-                    <ul class="lang-list">
-                        <li class="lang-item">Eng</li>
-                        <li class="lang-item">Esp</li>
-                        <li class="lang-item">Ru</li>
-                    </ul>
-                </div>
-            </header>
+                    <div class="switch-lang">
+                        <ul class="lang-list">
+                            <li class="lang-item">Eng</li>
+                            <li class="lang-item">Esp</li>
+                            <li class="lang-item">Ru</li>
+                        </ul>
+                    </div>
+                </header>
 
 
-            <div class="hero__container">
-                <div class="hero__txt">
-                    <h1 class="section-title">Aero filming and virtual 3D tours</h1>
-                    <div class="hero-desc">
-                        We offer aerofilming and 3D virtual tours. It is a great way to show all ins of any
-                        property object, restaurant or have a post-pdocution for any event
+                <div class="hero__container">
+                    <div class="hero__txt">
+                        <h1 class="section-title">Aero filming and virtual 3D tours</h1>
+                        <div class="hero-desc">
+                            We offer aerofilming and 3D virtual tours. It is a great way to show all ins of any
+                            property object, restaurant or have a post-pdocution for any event
+                        </div>
+                    </div>
+
+                    <div class="socials">
+                        <ul class="socials-list">
+                            <li class="socials-item">
+                                <a href="index.html" class="socials__link">
+                                    <img src="assets/img/inst.svg" alt="logo" class="socials-icon">
+                                </a>
+                            </li>
+                            <li class="socials-item">
+                                <a href="index.html" class="socials__link">
+                                    <img src="assets/img/ytb.svg" alt="logo" class="socials-icon">
+                                </a>
+                            </li>
+                            <li class="socials-item">
+                                <a href="index.html" class="socials__link">
+                                    <img src="assets/img/fb.svg" alt="logo" class="socials-icon">
+                                </a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
 
-                <div class="socials">
-                    <ul class="socials-list">
-                        <li class="socials-item">
-                            <a href="index.html" class="socials__link">
-                                <img src="assets/img/inst.svg" alt="logo" class="socials-icon">
-                            </a>
-                        </li>
-                        <li class="socials-item">
-                            <a href="index.html" class="socials__link">
-                                <img src="assets/img/ytb.svg" alt="logo" class="socials-icon">
-                            </a>
-                        </li>
-                        <li class="socials-item">
-                            <a href="index.html" class="socials__link">
-                                <img src="assets/img/fb.svg" alt="logo" class="socials-icon">
-                            </a>
-                        </li>
-                    </ul>
+                <div class="illustrations">
+                    <div class="drone">
+                        <img src="assets/img/drone.png" alt="logo" class="drone-illust">
+                    </div>
+                    <div class="flat">
+                        <img src="assets/img/flat.png" alt="logo" class="flat-illust">
+                    </div>
                 </div>
-            </div>
 
 
 
 
-            <div class="drone">
-                <img src="assets/img/drone.png" alt="logo" class="drone-illust">
-            </div>
-            <div class="flat">
-                <img src="assets/img/flat.png" alt="logo" class="flat-illust">
-            </div>
+            </section>
 
+            <!-- About secction -->
+            <section class="about">
 
+                <h2 class="about-header">What we do</h2>
+                <div class="about-txt__bg">
+                    <div class="about-txt">
+                        You can have a look on illustration of our services below.
+                        We offer a great way to show all the beauty of any sight.
+                    </div>
+                </div>
+                <div class="demo">
+                    <iframe class="iframe" allowfullscreen src="https://www.youtube.com/watch?v=9TmgdP0se8M">
+                    </iframe>
+                    <iframe class="iframe" allowfullscreen src="https://www.youtube.com/watch?v=9TmgdP0se8M">
+                    </iframe>
+                </div>
+
+            </section>
+
+            <!-- contacts section -->
+            <section class=" contacts">
+                <div class="container contacts-container">
+
+                    <div class="pricing-container">
+                        <h2 class="pricing__header">Pricing</h2>
+                        <div class="pricing__text">
+                            There is no fixed pricing policy, as it dependes on the object size, location, vidoe
+                            duration.
+                            In case of aerofilming weather is also paying a big part in vidoe production.
+                        </div>
+                    </div>
+
+                    <div class="contacts">
+                        <div class="contacts-header">
+                            <h2>
+                                Contacts
+                            </h2>
+                        </div>
+
+                        <ul class="contacts-list">
+                            <li class="contacts-item"><b>Phone:</b> &nbsp;&nbsp;&nbsp;+34 610 628 003</li>
+                            <li class="contacts-item"><b>Email:</b> &nbsp;&nbsp;&nbsp; reawqk@mail.ru</li>
+                            <li class="contacts-item"><b>Address:</b> &nbsp;&nbsp;&nbsp; Lloret de Mar, Girona province,
+                                Spain
+                            </li>
+                        </ul>
+                    </div>
+
+                </div>
+                <footer class="footer">
+                    <p class="rigths">Ⓒ All rights reserved</p>
+                </footer>
+            </section>
+        </div>
     </div>
 
-    </section>
-
-    <!-- About secction -->
-    <section class="about">
-
-        <h2 class="about-header">What we do</h2>
-        <div class="about-txt">
-            You can have a look on illustration of our services below. 
-            We offer a great way to show all the beauty of any sight.
-        </div>
-
-        <div class="demo">
-            <div class="tour-winddow">
-                <iframe class="iframe" allowfullscreen src="https://www.youtube.com/watch?v=9TmgdP0se8M">
-                </iframe>
-            </div>
-            <div class="aero-window">
-                <iframe class="iframe" allowfullscreen src="https://www.youtube.com/watch?v=9TmgdP0se8M">
-                </iframe>
-            </div>
-        </div>
-
-    </section>
-
-    <!-- contacts section -->
-    <section class=" contacts">
-        <div class="container contacts-container">
-
-            <div class="pricing-container">
-                <h2 class="pricing__header">Pricing</h2>
-                <div class="pricing__text">
-                    There is no fixed pricing policy, as it dependes on the object size, location, vidoe duration.
-                    In case of aerofilming weather is also paying a big part in vidoe production.
-                </div>
-            </div>
-
-            <div class="contacts">
-                <div class="contacts-header">
-                    <h2>
-                        Contacts
-                    </h2>
-                </div>
-
-                <ul class="contacts-list">
-                    <li class="contacts-item"><b>Phone:</b> &nbsp;&nbsp;&nbsp;+34 610 628 003</li>
-                    <li class="contacts-item"><b>Email:</b> &nbsp;&nbsp;&nbsp; reawqk@mail.ru</li>
-                    <li class="contacts-item"><b>Address:</b> &nbsp;&nbsp;&nbsp; Lloret de Mar, Girona province, Spain
-                    </li>
-                </ul>
-            </div>
-
-        </div>
-        <footer class="footer">
-            <p class="rigths">Ⓒ All rights reserved</p>
-        </footer>
-    </section>
-
-    </div>
     <link rel="stylesheet" href="assets/main.css">
 </body>
 
