--- a/index.html
+++ b/index.html
@@ -95,9 +95,10 @@
                     </div>
                 </div>
                 <div class="demo">
-                    <iframe class="iframe" allowfullscreen src="https://www.youtube.com/watch?v=9TmgdP0se8M">
+                    <iframe class="iframe" allowfullscreen src="https://www.youtube.com/embed/9TmgdP0se8M">
                     </iframe>
-                    <iframe class="iframe" allowfullscreen src="https://www.youtube.com/watch?v=9TmgdP0se8M">
+                    <iframe class="iframe" allowfullscreen src="https://www.youtube.com/embed/QHydkEARVKE
+                    ">
                     </iframe>
                 </div>
 
